@@ -1,3 +1,6 @@
+*Wed Jan 20 2010 Henri Gavin <henri.gavin@duke.edu> 0.20100105
+- small grammar correction in user-manual.html
+
 *Sat Jan 16 2010 Henri Gavin <henri.gavin@duke.edu> 0.20100105
 - create a set of exit codes with an exit code index in user-manual
 - standardize usage of stderr prior to exit calls and stdout for "verbose"
